fix: Don't change opacity on hover on mobiles

--- a/blocks/button/button.css
+++ b/blocks/button/button.css
@@ -3,6 +3,9 @@
   padding: 0;
   text-align: center;
   opacity: 1;
+  -webkit-transition: opacity .2s ease;
+  -moz-transition: opacity .2s ease;
+  -o-transition: opacity .2s ease;
   transition: opacity .2s ease;
 }
 
